# Rust-demo

./: Cargo.toml  README.md
src/: main.rs
src/base/: map_track.rs  mod.rs  poll.rs  poll_map.rs  query.rs
src/border/: border_cancel.rs  border_common.rs  border_create.rs  border_detail.rs  border_price.rs  mod.rs
src/bsamecity/: bsamecity_addfee.rs  bsamecity_cancel.rs  bsamecity_common.rs  bsamecity_order.rs  bsamecity_precancel.rs  bsamecity_price.rs  mod.rs
src/config/: account.rs  mod.rs  url.rs
src/corder/: corder_cancel.rs  corder_common.rs  corder_create.rs  corder_detail.rs  corder_price.rs  mod.rs
src/elec_print/: authThird.rs  elec_cancel.rs  elec_common.rs  elec_custom.rs  elec_order.rs  elec_printOld.rs  logistic_send.rs  mod.rs  order_task.rs  print_task.rs  refundOrder_task.rs  shop_authorize.rs  third_info.rs
src/international/: api_call.rs  cancel_pick_up.rs  international_address_resolution.rs  mod.rs  pick_up.rs
src/monitor/: mod.rs  monitor_orderExport.rs  monitor_sendOut.rs
src/test/: base_test.rs  border_test.rs  bsamecity_test.rs  corder_test.rs  elec_print_test.rs  international_test.rs  mod.rs  monitor_test.rs  value_add_test.rs  workorder_test.rs
src/utils/: http_util.rs
src/value_add/: address_resolution.rs  auto_number.rs  back_order.rs  det_ocr.rs  estimate_price.rs  estimate_time.rs  intercept_order.rs  mod.rs  reachable.rs  sms_send.rs
src/workorder/: mod.rs  work_order_create.rs  work_order_query.rs  work_order_reply.rs  work_order_upload.rs
